# nix-nerd-dictation

./: .gitignore  CLAUDE.md  README.md  applet-package.nix  default-config.py  flake.nix  home-manager-module.nix  nixos-module.nix  package.nix  vosk-models.nix
cosmic-applet/: Cargo.toml
cosmic-applet/data/: com.digunix.CosmicAppletNerdDictation.desktop
cosmic-applet/src/: main.rs  state.rs  window.rs
